aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: probes-api
  labels:
    app: probes-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: probes-api
