aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: probes-api-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: probes-api.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: probes-api
              port:
                number: 80
